about us fix
Fixed text overlapping with previous and next buttons.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -376,7 +376,7 @@ user-select: none;
 /*caption text */
 .text{
     color: #FFF8EE;
-    font-size:25px;
+    font-size:22px;
     padding: 8px 12px;
     position: absolute;
     bottom: 20px;
